<resources>
    <string name="app_name">CrimeIntent</string>
    <string name="title_crime">Title</string>
    <string name="crime_hint">Enter a title for the crime.</string>
    <string name="crime_details">Details</string>
    <string name="cirme_solved">Solved</string>
    <string name="new_crime">New Crime</string>
    <string name="choose_suspect">Choose suspect</string>
    <string name="send_crime_report">Send crime report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is 1$s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="crimes_not_exists">Crimes is not exists</string>
    <string name="back_text">Back</string>
    <string name="back_image"><![CDATA[<]]></string>
    <string name="detail_crime_photo">detail crime photo</string>
</resources>